fix:allow vertical scroll - for all page visibility

--- a/frontend/views/static/styles/about.css
+++ b/frontend/views/static/styles/about.css
@@ -170,7 +170,3 @@ section:nth-child(4) {
 section:nth-child(5) {
 	animation-delay: 0.5s;
 }
-
-.base-wrapper {
-	height: 100%;
-}
