--- a/frontend/views/static/styles/base.css
+++ b/frontend/views/static/styles/base.css
@@ -26,13 +26,15 @@ body {
 	flex-direction: column;
 	align-items: center;
 	justify-content: space-between;
-	overflow: hidden;
+	overflow-y: auto;
+	overflow-x: hidden;
 	height: 100vh;
 	background: linear-gradient(
 		180deg,
 		var(--pale-color) 5%,
 		var(--background-color) 100%
 	);
+
 }
 
 h1,
